support CC=clang on equal footing with CC=gcc
Port plain Makefile to CMakeLists.txt. CMake allows us to manage the
complexity of a conditional build more effectively, making it possible
to support multiple compilers without creating a maintainability mess.

CMake will also potentially make it easier to support multiple linkers
in the future (gold, mold, etc), if that ever becomes wortwhile.

Update the build instructions and gitlab CI configurations accordingly,
as they are affected by the switch from GNU Make to CMake.

The CMakeLists.txt retain some ugly-ish OpenBSD-specific kludges,
similar to the pre-existing Makefile. I think these are probably not
OpenBSD best practices, but I'm not sure what I'm doing wrong to make
such workarounds necessary. On the plus side, switching to CMake has
made it relatively straightforward to support clang on OpenBSD, which is
the default system CC. As a result, we no longer require gcc (aka egcc)
as part of the build toolchain on OpenBSD. Silver lining!

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,35 @@
 image: archlinux/archlinux:base-devel
 
-default:
-  before_script:
-    - echo 'Install compile-time and runtime dependencies'
-    - pacman --noconfirm -Sy curl duktape pcre2
+.build_dependencies: &build_dependencies
+    - pacman --noconfirm -Sy cmake clang curl duktape pcre2
 
-build:
+.build_steps: &build_steps
+    - cmake -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=1 . -B ./build
+    - cmake --build ./build
+    - cd ./build/tests && ctest -E '^cli-try-sandbox$' .
+
+build_with_gcc:
   stage: build
+  before_script:
+    - *build_dependencies
   script:
-    - make
-  artifacts:
-    paths:
-      - build/youtube-unthrottle
+    - export CC=gcc
+    - export CXX=g++
+    - *build_steps
+
+build_with_clang:
+  stage: build
+  before_script:
+    - *build_dependencies
+  script:
+    - export CC=clang
+    - export CXX=clang++
+    - *build_steps
 
 format:
   stage: build
   before_script:
-    - pacman --noconfirm -Sy clang
+    - *build_dependencies
   script:
-    - make fmt
-
-test:
-  stage: test
-  script:
-    - make test
+    - cmake -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Debug . -B ./build
+    - cmake --build ./build --target fmt
