--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,16 @@ target_sources(youtube PRIVATE
 	youtube.c
 )
 target_include_directories(youtube PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_link_libraries(youtube PUBLIC my_cflags)
+target_link_libraries(youtube PRIVATE my_cflags)
+
+add_library(libcurl SHARED IMPORTED)
+add_library(libduktape SHARED IMPORTED)
+add_library(libpcre2-8 SHARED IMPORTED)
+target_link_libraries(youtube PRIVATE
+	curl
+	duktape
+	pcre2-8
+)
 
 # choose between libyoutube.a (release build) and libyoutubed.a (debug build)
 set_target_properties(youtube PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
