trigger failure on clang-format warnings
Make `make fmt` and `cmake --build ./build --target fmt` return non-zero
status code if clang-format generates any warnings.

By default, `find -exec command {} ;` returns zero (success) even if
<command> returns non-zero (failure). This means the CI formatting job
always passes, even when formatting errors are found!

Switch to the alternative `find -exec command {} +` form, which returns
non-zero status code if an invoked <command> returns non-zero.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ add_custom_target(fmt COMMAND find
 	${CMAKE_SOURCE_DIR}/include
 	${CMAKE_SOURCE_DIR}/src
 	( -name *.h -or -name *.c )
-	-exec ${FORMATTER} -Werror --dry-run {} \;
+	-exec ${FORMATTER} -Werror --dry-run {} +
 	VERBATIM USES_TERMINAL
 )
 
