add syscall restrictions to sandbox with seccomp
Use libseccomp to sandbox syscalls on Linux, similar to how pledge()
restricts what youtube-unthrottle can do on OpenBSD.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,6 @@ add_library(youtube ${CMAKE_CURRENT_BINARY_DIR})
 target_sources(youtube PRIVATE
 	debug.c
 	js.c
-	landlock.c
 	re.c
 	sandbox.c
 	tmpfile.c
@@ -20,6 +19,17 @@ target_link_libraries(youtube PRIVATE
 	duktape
 	pcre2-8
 )
+
+if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
+	target_sources(youtube PRIVATE
+		landlock.c
+		seccomp.c
+	)
+	add_library(libseccomp SHARED IMPORTED)
+	target_link_libraries(youtube PRIVATE
+		seccomp
+	)
+endif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
 
 # choose between libyoutube.a (release build) and libyoutubed.a (debug build)
 set_target_properties(youtube PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
