normalize endif() in CMakeLists.txt
Make a cosmetic change to endif() in CMakeLists.txt, for consistency
across the cmake corpus.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,4 +40,4 @@ set_target_properties(youtube PROPERTIES
 if (CMAKE_BUILD_TYPE STREQUAL Debug)
 	message(STATUS "Enabling runtime debug output")
 	target_compile_definitions(youtube PRIVATE WITH_DEBUG_OUTPUT)
-endif()
+endif (CMAKE_BUILD_TYPE STREQUAL Debug)
