add tests for seccomp.c and landlock.c
Integrate CPM.cmake as a package manager:

    https://github.com/cpm-cmake/CPM.cmake

For the project's present needs, vendoring (copy-pasting) dependencies
or using git submodules would suffice, but CPM seems a bit more
future-proof, without incurring too much additional complexity.

Use CPM to install greatest, a header-only C testing framework:

    https://github.com/silentbicycle/greatest

... and then add tests for seccomp.c and landlock.c based on greatest.

The new seccomp_io_inet_tmpfile() testcase in ./tests/sandbox/seccomp.c
actually caught a bug in ./src/seccomp.c, which hopefully justifies the
marginal complexity incurred above.

Specifically, seccomp_allow_tmpfile() and seccomp_allow_rpath() were
applying the <flags> BPF filter to the wrong positional argument of
openat() -- a SCMP_A1 vs SCMP_A2 typo. The resulting behavior was
nondeterministic, which was then caught by intermittent failure of the
seccomp_io_inet_tmpfile() testcase.

A few additional fixes, motivated by the core changes above:

    Reorganize how sanitizer flags are added to CFLAGS, to allow more
    fine-grained control over test binaries where linking to ASan would
    lead to LSan/seccomp conflicts.

    Fix compiler warnings in fuzzer entrypoints, uncovered by enabling
    more compiler options beyond just `-g -O1`.

    In tmpfd(), fclose() the FILE* returned by tmpfile(), after dup-ing
    the underlying file descriptor. I believe (though I'm not totally
    sure) that this is necessary to avoid leaking the FILE* itself.

    In sandbox_verify(), check socket() and connect() directly, without
    first calling getaddrinfo(). The latter does not map directly to a
    single syscall, making its failures more difficult to interpret
    cleanly, e.g. seccomp filtering (apparently) does not cause
    getaddrinfo() to set errno to EACCES, maybe due to fallback logic
    within the getaddrinfo() implementation of glibc.

Some gotchas for the tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,12 @@
 image: archlinux/archlinux:base-devel
 
 .build_dependencies: &build_dependencies
-    - pacman --noconfirm -Sy cmake clang curl duktape pcre2
+    - pacman --noconfirm -Sy cmake clang curl duktape git libseccomp pcre2
 
 .build_steps: &build_steps
     - cmake -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=1 . -B ./build
     - cmake --build ./build
-    - cd ./build/tests && ctest -E '^cli-try-sandbox$' .
+    - cd ./build/tests && ctest --output-junit junit.xml -E '^cli-try-sandbox|sandbox-landlock$' .
 
 build_with_gcc:
   stage: build
@@ -16,6 +16,12 @@ build_with_gcc:
     - export CC=gcc
     - export CXX=g++
     - *build_steps
+  artifacts:
+    when: always
+    paths:
+      - ./build/tests/junit.xml
+    reports:
+      junit: ./build/tests/junit.xml
 
 build_with_clang:
   stage: build
@@ -25,6 +31,12 @@ build_with_clang:
     - export CC=clang
     - export CXX=clang++
     - *build_steps
+  artifacts:
+    when: always
+    paths:
+      - ./build/tests/junit.xml
+    reports:
+      junit: ./build/tests/junit.xml
 
 format:
   stage: build
