--- a/tests/fuzzer/CMakeLists.txt
+++ b/tests/fuzzer/CMakeLists.txt
@@ -2,7 +2,7 @@ macro(add_fuzzer target)
 	add_executable(${target})
 	target_sources(${target} PRIVATE ${target}.c)
 	target_include_directories(${target} PRIVATE ${PROJECT_SOURCE_DIR}/src)
-	target_link_libraries(${target} PRIVATE youtube)
+	target_link_libraries(${target} PRIVATE youtube my_cflags)
 	target_compile_options(${target} PRIVATE -g -O1 -fsanitize=fuzzer)
 	target_link_options(${target} PRIVATE -fsanitize=fuzzer)
 endmacro()
@@ -13,7 +13,6 @@ include(CheckSanitizer)
 # thereby make check_c_compiler_flag() work as expected. Just use libasan.
 check_sanitizer(CFLAG_FUZZER -fsanitize=fuzzer asan)
 if (CFLAG_FUZZER)
-	target_compile_options(my_cflags INTERFACE -fsanitize=fuzzer)
 	add_fuzzer(parse_json)
 	add_fuzzer(find_js_deobfuscator)
 	add_fuzzer(call_js_foreach)
