add clang source-based code coverage to CI
Use clang to implement code coverage. Related docs:

    https://clang.llvm.org/docs/SourceBasedCodeCoverage.html#using-the-profiling-runtime-without-a-filesystem

clang's code coverage hooks seemed more straightforward than gcc's. The
gcc equivalent of the above clang feature appears to be:

    https://gcc.gnu.org/onlinedocs/gcc/Freestanding-Environments.html

Without any custom hooks, the default gcc-based behavior is to open and
write *.gcda coverage files on process exit, which is blocked by the
sandbox tests. This prevents code coverage information for these tests
from being written to disk, even when the core test logic itself runs as
expected.

The solution is for ./tests/sandbox/{landlock,seccomp}.c to use clang's
code coverage hooks to open coverage data file descriptors before the
sandbox closes and starts blocking filesystem access.

Complementary changes included in this commit:

- enable code coverage with -DBUILD_COVERAGE=1
- show code coverage percentage in GitLab's MR widget
- show test coverage visualization in the file diff view of GitLab MRs
- add new tests to increase line coverage to ~90%
- refactor error-handling to use RAII instead of `goto cleanup` style
- refactor debug.h to match error-handling in a more structured way

See below for example code coverage data from a local test run in my dev
environment. Note: landlock.c and sandbox.c are covered here, while they
are uncovered (and excluded) under CI because the CI runners do not
(yet) support the Landlock APIs.

Filename  Functions Missed Functions Executed Lines Missed Lines   Cover
debug.c           4                0  100.00%    24            0 100.00%
js.c              9                0  100.00%   158            0 100.00%
landlock.c        7                0  100.00%    62            0 100.00%
re.c              6                0  100.00%   103            6  94.17%
sandbox.c         5                0  100.00%    76            9  88.16%
secc

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,20 @@
 include(CTest)
-add_test(NAME cli-help COMMAND youtube-unthrottle --help)
-add_test(NAME cli-try-sandbox COMMAND youtube-unthrottle --try-sandbox)
 
+macro(add_greatest source)
+	set(test_exe greatest-${source})
+	add_test(${source} ${test_exe} -v)
+	add_executable(${test_exe})
+	target_sources(${test_exe} PRIVATE ${source}.c)
+	target_include_directories(${test_exe} PRIVATE
+		${PROJECT_SOURCE_DIR}/src
+		${greatest_SOURCE_DIR}
+	)
+	target_link_libraries(${test_exe} PRIVATE youtube my_cflags)
+endmacro()
+
+add_subdirectory(cli)
 add_subdirectory(fuzzer)
+add_subdirectory(js)
+add_subdirectory(re)
 add_subdirectory(sandbox)
+add_subdirectory(youtube)
