--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ image: archlinux/archlinux:base-devel
 .build_steps: &build_steps
     - cmake -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=1 . -B ./build
     - cmake --build ./build
-    - cd ./build/tests && ctest --output-junit junit.xml -E '^cli-try-sandbox|sandbox-landlock$' .
+    - ctest --test-dir ./build/tests/ --output-junit junit.xml -E '^cli-try-sandbox|landlock$'
 
 build_with_gcc:
   stage: build
@@ -45,3 +45,22 @@ format:
   script:
     - cmake -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Debug . -B ./build
     - cmake --build ./build --target fmt
+
+coverage:
+  stage: build
+  before_script:
+    - *build_dependencies
+    - pacman --noconfirm -Sy llvm python
+  script:
+    - export CC=clang
+    - export CXX=clang++
+    - cmake -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=1 -DBUILD_COVERAGE=1 . -B ./build
+    - cmake --build ./build
+    - COVERAGE_PROFILE_DIR=coverage.profraw ctest --test-dir ./build/tests/ --output-junit junit.xml -E '^cli-try-sandbox|landlock$'
+    - ./scripts/coverage.sh -E 'main.c|src/(coverage|sandbox|landlock).c' coverage.profraw coverage.xml
+  coverage: '/^TOTAL.*\s+([\d\.]+\%)$/'
+  artifacts:
+    reports:
+      coverage_report:
+        coverage_format: cobertura
+        path: ./coverage.xml
