normalize strerror() in DEBUG/INFO/WARN/ERROR logs
Make debug.h macros more explicit, especially WRT strerror(errno) output
in the style of printf("%m").

For example, info_if() now logs the given format string exactly as-is,
while info_m_if() appends the equivalent of "%m" to the format string.
The same applies to warn_then_return() and warn_m_then_return(), as well
as error_if() and error_m_if(), respectively.

Convert callers to use the explicit "%m" variants like info_m_if() and
warn_m_then_return(), in cases where strerror() output is desired, e.g.
logging after malloc() failure or close() error.

Also, fix an apparent bug in the return value of the seccomp_allow()
helper function, which was introduced in earlier INFO/WARN-related
refactoring in 11989493.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ target_sources(youtube PRIVATE
 	sandbox.c
 	tmpfile.c
 	url.c
+	write.c
 	youtube.c
 )
 target_include_directories(youtube PUBLIC ${PROJECT_SOURCE_DIR}/include)
