refactor error handling, use explicit result type
Refactor youtube.h and associated helper APIs to return an explicit
result (aka error) type, thereby allowing main.c to control how errors
are handled in a more explicit fashion.

Remove APIs from debug.h that affect control flow, like error_if() and
warn_then_return(). Callers that previously used these APIs to fail-fast
or exit() entirely can now return a result_t instead. This captures
error details, while still allowing code higher up the callstack to
control process lifetime.

In general, calling a function defined in youtube.h should only abort
the process on a true logic error, e.g. tripping an assert() on a Debug
build. Early process exit() should no longer occur just because of a
failure to malloc() a buffer, for example. This moves youtube.h a bit
closer to the behaviors expected of an idiomatic C library API.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,5 +16,6 @@ add_subdirectory(cli)
 add_subdirectory(fuzzer)
 add_subdirectory(js)
 add_subdirectory(re)
+add_subdirectory(result)
 add_subdirectory(sandbox)
 add_subdirectory(youtube)
