enable asan/lsan/ubsan for test binaries
Enable AddressSanitizer, LeakSanitizer, and UndefinedBehaviorSanitizer
for tests based on greatest.h APIs.

For ./tests/sandbox/seccomp.c specifically, enable only AddressSanitizer
and UndefinedBehaviorSanitizer. Leave LeakSanitizer disabled, as its
teardown tracer thread ends up blocked by the seccomp sandbox.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,7 +9,7 @@ macro(add_greatest source)
 		${PROJECT_SOURCE_DIR}/src
 		${greatest_SOURCE_DIR}
 	)
-	target_link_libraries(${test_exe} PRIVATE youtube my_cflags)
+	target_link_libraries(${test_exe} PRIVATE sanitizers youtube my_cflags)
 endmacro()
 
 add_subdirectory(cli)
