minimize link workload by consolidating tests
Use CMake's create_test_sourcelist() feature to consolidate all tests
based on greatest.h into a single test binary. This saves CPU and IOPS
that would otherwise go towards linking N separate test binaries.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ if (BUILD_TESTING)
 		GITHUB_REPOSITORY silentbicycle/greatest
 		VERSION 1.5.0
 		DOWNLOAD_ONLY YES
+		PATCHES ./vendor/greatest_external_linkage.patch
 	)
 	add_subdirectory(tests)
 endif (BUILD_TESTING)
