--- a/tests/fuzzer/CMakeLists.txt
+++ b/tests/fuzzer/CMakeLists.txt
@@ -2,7 +2,7 @@ macro(add_fuzzer target)
 	add_executable(${target})
 	target_sources(${target} PRIVATE ${target}.c)
 	target_include_directories(${target} PRIVATE ${PROJECT_SOURCE_DIR}/src)
-	target_link_libraries(${target} PRIVATE youtube my_cflags)
+	target_link_libraries(${target} PRIVATE my_cflags youtube)
 	target_compile_options(${target} PRIVATE -g -O1 -fsanitize=fuzzer)
 	target_link_options(${target} PRIVATE -fsanitize=fuzzer)
 endmacro()
