skip landlock and seccomp tests under OpenBSD

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -37,10 +37,12 @@ macro(generate_test_driver)
 endmacro()
 
 register_test(js)
-register_test(landlock)
 register_test(re)
 register_test(result)
-register_test(seccomp "ASAN_OPTIONS=detect_leaks=0")
 register_test(youtube)
+if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
+	register_test(landlock)
+	register_test(seccomp "ASAN_OPTIONS=detect_leaks=0")
+endif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
 
 generate_test_driver()
