use jansson for JSON parsing and formatting
Switch to Jansson APIs for parsing and formatting JSON payloads:

    https://jansson.readthedocs.io/en/latest/apiref.html

Jansson is available on both Linux and OpenBSD, thus meeting our current
porting requirements:

    https://archlinux.org/packages/core/x86_64/jansson/
    https://cvsweb.openbsd.org/cgi-bin/cvsweb/ports/devel/jansson/

The switch to Jansson brings a few benefits:

- InnerTube POST request JSON gains idiomatic, minified formatting
  rather than adhoc formatting of INNERTUBE_POST_FMT literal
- InnerTube POST request JSON formatting becomes robust to any potential
  encoding or escaping issues that may arise in the future, e.g. changes
  to video ID characters
- InnerTube POST response JSON parsing reads more naturally with
  procedural-style Jansson APIs, rather than stack-based Duktape APIs;
  the latter still makes sense for JS execution, but for JSON parsing,
  the former is a more natural fit

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: archlinux/archlinux:base-devel
 
 .build_dependencies: &build_dependencies
-    - pacman --noconfirm -Sy cmake clang curl duktape git libseccomp pcre2
+    - pacman --noconfirm -Sy cmake clang curl duktape git jansson libseccomp pcre2
 
 .build_steps: &build_steps
     - cmake -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=1 . -B ./build
