refactor main.c for readability
- reduce goto usage in main.c, and use idiomatic check() instead
- clean up CLI behavior when conflicting CLI options are provided
- add negative tests for CLI options to ./tests/cli/CMakeLists.txt
- print supported CLI options as part of --help output
- cover ./src/sandbox.c with a dedicated greatest.h test instead of
  relying on the --try-sandbox CLI option, and then remove the (now
  unnecessary) code coverage hooks from main.c
- make compiler_features.h and coverage.h into internal implementation
  details of libyoutube, moving them out of the ./include directory

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ image: archlinux/archlinux:base-devel
 .build_steps: &build_steps
     - cmake -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=1 . -B ./build
     - cmake --build ./build
-    - ctest --test-dir ./build/tests/ --output-junit junit.xml -E '^cli-try-sandbox|landlock$'
+    - ctest --test-dir ./build/tests/ --output-junit junit.xml -E '^(cli-try-sandbox|cli-valid-args-invalid-hostname|landlock|sandbox)$'
 
 build_with_gcc:
   stage: build
@@ -56,8 +56,8 @@ coverage:
     - export CXX=clang++
     - cmake -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=1 -DBUILD_COVERAGE=1 . -B ./build
     - cmake --build ./build
-    - COVERAGE_PROFILE_DIR=coverage.profraw ctest --test-dir ./build/tests/ --output-junit junit.xml -E '^cli-try-sandbox|landlock$'
-    - ./scripts/coverage.sh -E 'main.c|src/(coverage|sandbox|landlock).c' coverage.profraw ./build/coverage.xml
+    - COVERAGE_PROFILE_DIR=coverage.profraw ctest --test-dir ./build/tests/ --output-junit junit.xml -E '^(cli-try-sandbox|cli-valid-args-invalid-hostname|landlock|sandbox)$'
+    - ./scripts/coverage.sh -E 'main.c|src/(sandbox|landlock).c' coverage.profraw ./build/coverage.xml
   coverage: '/^TOTAL.*\s+([\d\.]+\%)$/'
   artifacts:
     reports:
