add project-level CMakePresets.json for ergonomics
Add CMakePresets.json to simplify how cmake and ctest are invoked in
common cases like debug builds, code coverage runs, etc.

Update README.md and .gitlab-ci.yml to use these new presets.

For reference on this CMake feature:

    https://cmake.org/cmake/help/latest/manual/cmake-presets.7.html
    https://blog.feabhas.com/2023/08/cmake-presets/
    https://martin-fieber.de/blog/cmake-presets/

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,8 @@
-include(CTest)
-
 add_subdirectory(cli)
-add_subdirectory(fuzzer)
+
+if (BUILD_FUZZER)
+	add_subdirectory(fuzzer)
+endif (BUILD_FUZZER)
 
 set(TEST_SOURCES "")
 
