--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,67 +1,62 @@
 image: archlinux/archlinux:base-devel
 
-.build_dependencies: &build_dependencies
-    - export PKG="$PKG cmake clang curl duktape git jansson libseccomp pcre2"
-    - pacman --noconfirm --needed -Sy $PKG
+variables:
+  PACKAGE_CMD: "pacman --noconfirm --needed -Sy"
+  PACKAGE_DEFAULT: "cmake clang curl duktape git jansson libseccomp pcre2"
+  PACKAGE_PER_JOB: ""
+  TESTS_FAIL_LACK_OF_LANDLOCK_API_IN_CI_RUNNERS: "^(cli-try-sandbox|cli-valid-args-invalid-hostname|landlock|sandbox|seccomp)$"
 
-.build_steps: &build_steps
-    - cmake -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=1 . -B ./build
-    - cmake --build ./build
-    - ctest --test-dir ./build/tests/ --output-junit junit.xml -E '^(cli-try-sandbox|cli-valid-args-invalid-hostname|landlock|sandbox|seccomp)$'
+.build_dependencies: &build_dependencies
+  before_script:
+    - ${PACKAGE_CMD} ${PACKAGE_DEFAULT} ${PACKAGE_PER_JOB}
 
 build:gcc:
+  <<: *build_dependencies
   stage: build
-  before_script:
-    - *build_dependencies
   script:
-    - export CC=gcc
-    - export CXX=g++
-    - *build_steps
+    - cmake --preset default
+    - cmake --build --preset default
+    - ctest --preset default -E ${TESTS_FAIL_LACK_OF_LANDLOCK_API_IN_CI_RUNNERS}
   artifacts:
     when: always
     reports:
-      junit: ./build/tests/junit.xml
+      junit: ./build/junit.xml
 
 build:clang:
+  <<: *build_dependencies
   stage: build
-  before_script:
-    - *build_dependencies
   script:
-    - export CC=clang
-    - export CXX=clang++
-    - *build_steps
+    - cmake --preset clang
+    - cmake --build --preset default
+    - ctest --preset default -E ${TESTS_FAIL_LACK_OF_LANDLOCK_API_IN_CI_RUNNERS}
   artifacts:
     when: always
     reports:
-      junit: ./build/tests/junit.xml
+      junit: ./build/junit.xml
 
 build:clang-format:
+  <<: *build_dependencies
   stage: build
-  before_script:
-    - *build_dependencies
   script:
-    - cmake -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Debug . -B ./build
-    - cmake --build ./build --target fmt
+    - cmake --preset default
+    - cmake --build --preset default --target fmt
 
 build:clang-coverage:
+  <<: *build_dependencies
   stage: build
   # Use medium machine type (instead of default small) to improve VM perf
   tags:
     - saas-linux-medium-amd64
-  # Prepend code coverage packages to install via build_dependencies anchor
-  before_script:
-    - export PKG="expect jq llvm python qemu-img qemu-system-x86 virtiofsd"
-    - *build_dependencies
+  variables:
+    PACKAGE_PER_JOB: "expect jq llvm python qemu-img qemu-system-x86 virtiofsd"
   #
   # For CI_PERSONAL_ACCESS_TOKEN, see: Settings > CI/CD > Variables
   #
   # Increment the BUMP envvar to force a VM image cache miss
   #
   script:
-    - export CC=clang
-    - export CXX=clang++
-    - cmake -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=1 -DBUILD_COVERAGE=1 -DCFLAG_FUZZER=0 . -B ./build
-    - cmake --build ./build
+    - cmake --preset coverage
+    - cmake --build --preset default
     - export CI_PERSONAL_ACCESS_TOKEN=${CI_PERSONAL_ACCESS_TOKEN}
     - export CI_PROJECT_ID=${CI_PROJECT_ID}
     - export BUMP=11
@@ -77,7 +72,7 @@ build:clang-coverage:
     paths:
       - vm-images/*.zst
     reports:
-      junit: ./build/tests/junit.xml
+      junit: ./build/junit.xml
       coverage_report:
         coverage_format: cobertura
         path: ./build/coverage.xml
@@ -85,14 +80,14 @@ build:clang-coverage:
 lint:shell:
   stage: build
   before_script:
-    - pacman --noconfirm --needed -Sy shellcheck
+    - ${PACKAGE_CMD} shellcheck
   script:
     - shellcheck --shell=bash ./scripts/*.sh
 
 lint:tcl:
   stage: build
   before_script:
-    - pacman --noconfirm --needed -Sy git python-pip
+    - ${PACKAGE_CMD} git python-pip
     - pip install --break-system-packages --root-user-action ignore tclint
   script:
     - tclfmt --in-place --indent=tab ./scripts/*.exp
